--- a/Course-Manager-Frontend/src/app/app.component.html
+++ b/Course-Manager-Frontend/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div *ngIf="isLoggedIn()">
+    <app-sidebar></app-sidebar>
+</div>
+<div [style.margin-left]="isLoggedIn() ? '250px' : '0'" style="padding: 1rem;">
+    <router-outlet></router-outlet>
+</div>
